--- a/sty.css
+++ b/sty.css
@@ -6,17 +6,459 @@
     box-sizing: border-box;
 }
 
-html{
+html
+{
     font-size: 62.5%;
     overflow-x: hidden;
 }
-body{
+
+body
+{
     background-color: #111;
+ 
+
+    display: block;
+    overflow-x: auto;
+    
+}
+
+
+.sidebar {
+  
+  
+
+  
+  position: sticky;
+top: 0;
+align-self: start;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidebar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidebar a:hover {
+  color: #f1f1f1;
+}
+
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #111;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+}
+
+.openbtn:hover {
+  background-color: #444;
+}
+
+
+
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+
+
+
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.About1
+{
+text-align: center;
+height: 25%;
+}
+.column1 {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
+  
+  /* Clear floats after image containers */
+  .row1::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+.p1
+{
+    font-size: 2rem;
+    color: white;
+    padding: 1rem 0;
+    font-weight: normal;
+}
+.GFG {
+
+        border: 1px solid hsla(0, 0%, 100%, .8);
+        border-top-width: 1px;
+        border-right-width: 1px;
+        border-bottom-width: 1px;
+        border-left-width: 1px;
+        border-top-style: solid;
+        border-right-style: solid;
+        border-bottom-style: solid;
+        border-left-style: solid;
+        border-top-color: rgba(255, 255, 255, 0.8);
+        border-right-color: rgba(255, 255, 255, 0.8);
+        border-bottom-color: rgba(255, 255, 255, 0.8);
+        border-left-color: rgba(255, 255, 255, 0.8);
+        border-image-source: initial;
+        border-image-slice: initial;
+        border-image-width: initial;
+        border-image-outset: initial;
+        border-image-repeat: initial;
+    
+        border-radius: 15px;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+        border-bottom-left-radius: 15px;
+    
+       
+        cursor: pointer;
+        height: 120px;
+        
+        padding: 30px;
+        padding-top: 30px;
+        padding-right: 30px;
+        padding-bottom: 30px;
+        padding-left: 30px;
+    
+    
+        width: auto;
+    border-width:25%;
+      border-color: #717171;
+   
+  
+      filter: brightness(100%);
+}
+.GFG:hover {
+    
+
+    filter: alpha(opacity=70);
+    opacity: 0.1;
+}
+
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+#img1
+{
+margin-left: 20%;
+
+}
+#img2{
+    margin-left:40%;
+    margin-top: 5%;
+}
+#img3{
+    margin-left: 2%;
+    margin-top: 5%;
+}
+
+#img4{
+   
+    margin-left:10%;
+    
+}
+
+#img5{
+    
+   margin-left:55%;
+    margin-top:30%;
+
+}
+#img6{
+    margin-left:15%;
+    
+
+}
+
+.tooltip2 {
+    margin-left:20%;
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+  }
+  
+  .tooltip2 .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+
+  
+    /* Position the tooltip */
+    position: relative;
+    z-index: 1;
+  }
+  
+  .tooltip2:hover .tooltiptext {
+    visibility: visible;
+  }
+
+
+  .tooltip1{ 
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+  }
+  
+  .tooltip1 .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+
+  
+    /* Position the tooltip */
+    position: relative;
+    z-index: 1;
+  }
+  
+  .tooltip1:hover .tooltiptext {
+    visibility: visible;
+  }
+
+  .tooltip3{ 
+    margin-left:25%;
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+  }
+  
+  .tooltip3 .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+
+  
+    /* Position the tooltip */
+    position: relative;
+    z-index: 1;
+  }
+  
+  .tooltip3:hover .tooltiptext {
+    visibility: visible;
+  }
+
+  .tooltip4{ 
+    margin-left: 15%;
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+  }
+  
+  .tooltip4 .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+
+  
+    /* Position the tooltip */
+    position: relative;
+    z-index: 1;
+  }
+  
+  .tooltip4:hover .tooltiptext {
+    visibility: visible;
+  }
+
+
+  .tooltip5{ 
+    margin-left: 15%;
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+  }
+  
+  .tooltip5 .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+
+  
+    /* Position the tooltip */
+    position: relative;
+    z-index: 1;
+  }
+  
+  .tooltip5:hover .tooltiptext {
+    visibility: visible;
+  }
+
+  .tooltip6{ 
+    margin-left: 25%;
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+  }
+  
+  .tooltip6 .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+
+  
+    /* Position the tooltip */
+    position: relative;
+    z-index: 1;
+  }
+  
+  .tooltip6:hover .tooltiptext {
+    visibility: visible;
+  }
+*{
+    box-sizing: border-box;
+    color: hsla(0, 0%, 100%, .8);
+    font-family: Poppins, sans-serif;
+    font-weight: 500;
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    text-decoration: none;
+}
+
+svg{
+    stroke: currentcolor;
+    fill: currentcolor;
+    stroke-width: 0;
+}
+svg:not(:root) {
+    overflow-clip-margin: content-box;
     overflow: hidden;
-    padding-left: 35rem;
+  
 }
 
-.heading{
+div.scrollmenu {
+    background-color: #333;
+    overflow: auto;
+    white-space: nowrap;
+  }
+  
+  div.scrollmenu a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+  }
+  
+  div.scrollmenu a:hover {
+    background-color: #777;
+  }
+.row
+{
+    display: flex;
+}
+
+.column
+{
+    flex: 50%;
+  padding: 10px;
+  height: 300px;
+}
+
+#title
+{
+    color:white;
+    font-size: small;
+}
+
+.center
+{
+    display: block;
+    margin: 0 auto;
+
+    border: 5px solid lightgreen;
+}
+
+.heading
+{
     text-align: center;
     margin: 0 6rem;
     font-size: 4rem;
@@ -25,11 +467,13 @@ body{
     color: #fff;
 }
 
-.heading span{
+.heading span
+{
     color: yellow;
 }
 
-.title{
+.title
+{
     text-align: center;
     margin: 0 6rem;
     font-size: 4rem;
@@ -38,11 +482,13 @@ body{
     color: #fff;
 }
 
-.title span{
+.title span
+{
     color: yellow;
 }
 
-.head{
+.head
+{
     text-align: center;
     margin: 0 6rem;
     font-size: 4rem;
@@ -50,10 +496,14 @@ body{
     border-bottom: .1rem solid #fff4;
     color: #fff;
 }
-.head span{
+
+.head span
+{
     color: yellow;
 }
-.pro{
+
+.pro
+{
     text-align: center;
     margin: 0 6rem;
     font-size: 4rem;
@@ -61,10 +511,14 @@ body{
     border-bottom: .1rem solid #fff4;
     color: #fff;
 }
-.pro span{
+
+.pro span
+{
     color: yellow;
 }
-header{
+
+header
+{
     position:fixed;
     top: 0;
     left: 0;
@@ -79,7 +533,8 @@ header{
     text-align: center;
 }
 
-header .user img{
+header .user img
+{
     height: 13rem;
     width: 13rem;
     border-radius: 50%;
@@ -87,25 +542,31 @@ header .user img{
     border: .5rem solid;
 }
 
-header .user .nm{
+header .user .nm
+{
     font-size:2rem;
     color: #fff;
 }
 
-header .user .jb{
+header .user .jb
+{
     font-size:1rem;
     color: #fff;
 }
 
-header .nv{
+header .nv
+{
     width: 100%;
 }
-header .nv ul{
+
+header .nv ul
+{
     list-style: none;
     padding: 1rem ;
 }
 
-header .nv ul li a{
+header .nv ul li a
+{
     display: block;
     padding: 1rem;
     margin: 1.5rem 0;
@@ -115,11 +576,14 @@ header .nv ul li a{
     border-radius: 5rem;
     text-decoration: none;  
 }
-header .nv ul li a:hover{
+
+header .nv ul li a:hover
+{
     background-color:yellowgreen;
 }
 
-.Details .Row{
+.Details .Row
+{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -127,36 +591,47 @@ header .nv ul li a:hover{
     padding: 3rem 0;
 }
 
-.Details .Row .det{
+.Details .Row .det
+{
     flex: 1 1 48rem;
     padding: 2rem 1rem;
     padding-left: 8rem;
 }
 
-.Details .Row .det h3{
+.Details .Row .det h3
+{
     font-size: 2rem;
     color: yellow;
     padding: 1rem 0;
     font-weight: normal;
 }
 
-.Details .Row .det h3 span{
+.Details .Row .det h3 span
+{
     color: #eee;
     padding: 0. 5rem;
 }
-table,th,td{
+
+table,th,td
+{
     border: 1px solid yellow;
     border-collapse: collapse;
 }
-td{
+
+td
+{
     color: white;
     padding: 1rem;
 }
-th{
+
+th
+{
     color: white;
     padding: 1rem;
 }
-table{
+
+table
+{
     text-align: center;
     margin: 0 6rem;
     font-size: 2rem;
@@ -164,13 +639,17 @@ table{
     border-bottom: .1rem solid #fff4;
     color: #fff;
 }
-#lis li{
+
+#lis li
+{
     margin: 0 9rem;
     color: white;
     font-size: medium;
     padding: .5rem 1rem;
 }
-.Project .Row{
+
+.Project .Row
+{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -178,20 +657,127 @@ table{
     padding: 3rem 0;
 }
 
-.Project .Row .det{
+.Project .Row .det
+{
     flex: 1 1 48rem;
     padding: 2rem 1rem;
     padding-left: 8rem;
 }
 
-.Project .Row .det h3{
+.Project .Row .det h3
+{
     font-size: 2rem;
     color: yellow;
     padding: 1rem 0;
     font-weight: normal;
 }
 
-.Project .Row .det h3 span{
+.Project .Row .det h3 span
+{
     color: #eee;
     padding: 0. 5rem;
+}
+
+
+
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container 
+{
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next 
+{
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next 
+{
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover 
+{
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text 
+{
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext 
+{
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot 
+{
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover 
+{
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade 
+{
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade 
+{
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) 
+{
+  .prev, .next,.text {font-size: 11px}
 }
